[tool.poetry]
name = "hitchhiking-diary-server"
version = "0.1.0"
description = "Hitchhiking diary API"
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.1"
psycopg = {version = "^3.1.19", extras = ["c"]}
geoalchemy2 = {version = "^0.15.1", extras = ["shapely"]}
pydantic-settings = "^2.3.4"
python-multipart = "^0.0.9"
argon2-cffi = "^23.1.0"
python-jose = "^3.3.0"
wheel = { version = "^0.43.0", optional = true }
uvloop = { version = "^0.19.0", optional = true }
jinja2 = "^3.1.4"
pillow = "^10.4.0"
requests = "^2.32.3"
py-staticmaps = "^0.4.0"
pycairo = "^1.26.1"

[tool.poetry.extras]
docker = ["wheel", "uvloop"]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | .env
  | .venv
  | data
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
